#
# Copyright (C) 2014 by Dave Murphy (davem@devkitpro.org)
# License: GPL

CFLAGS = @CFLAGS@ -DARM11 -D_3DS -I$(DEVKITPRO)/libctru/include

noinst_LIBRARIES = lib3dsdoom.a

lib3dsdoom_a_SOURCES = \
 i_main.c       i_network.c     i_video.c       i_sound.c \
 i_system.c     i_joy.c         i_pngshot.c	i_pngshot.h \
 prboomGfx.c    prboomGfx.h

