#
# Copyright (C) 2014 by Dave Murphy (davem@devkitpro.org)
# License: GPL

CFLAGS = @CFLAGS@ -DARM9 -D__NDS__ -I$(DEVKITPRO)/libnds/include

noinst_LIBRARIES = libndsdoom.a

libndsdoom_a_SOURCES = \
 i_main.c       i_network.c     i_video.c       i_sound.c \
 i_system.c     i_joy.c         i_pngshot.c	i_pngshot.h

